Fix: Fullscreen - Adjust overlap delay term #383

--- a/src/decoration/_animate.scss
+++ b/src/decoration/_animate.scss
@@ -133,7 +133,7 @@ xul|search-textbox.tabsFilter:hover,
 }
 #navigator-toolbox[inFullscreen="true"]:hover {
   transition-duration: 1.5s;
-  transition-delay: 1s;
+  transition-delay: 0.5s;
 }
 
 @keyframes fullscreen {
